force-app/main/default/objects/Mailchimp__c/Mailchimp__c.object-meta.xml
<CustomObject>
    <label>Mailchimp</label>
    <nameField>
        <displayFormat>MC-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mailchimps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>