force-app/main/default/objects/Mailchimp__c/fields/EnquiryGroupId__c.field-meta.xml
<CustomField>
    <fullName>EnquiryGroupId__c</fullName>
    <label>Enquiry Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>