force-app/main/default/objects/Mailchimp__c/fields/ListId__c.field-meta.xml
<CustomField>
    <fullName>ListId__c</fullName>
    <label>List Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>