force-app/main/default/objects/Mailchimp__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>School</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Mailchimps</relationshipLabel>
    <relationshipName>Mailchimps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>