force-app/main/default/objects/Mailchimp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>School__c</columns>
    <columns>URL__c</columns>
    <columns>ListId__c</columns>
    <columns>EnquiryGroupId__c</columns>
    <columns>ApiKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>